@@ -20,9 +20,23 @@
 #include <log.h>
 #include <ui.h>
 
+static GtkTreeView *w_treeview;
+
 static void save_settings(GtkWindow *window, GSettings *settings)
 {
-	int w, h, x, y;
+	int w, h, x, y, sort_col_id;
+	GtkTreeSortable *model;
+	GtkSortType sort_order;
+
+	model = GTK_TREE_SORTABLE(gtk_tree_view_get_model(GTK_TREE_VIEW(w_treeview)));
+	gtk_tree_sortable_get_sort_column_id(model, 
+					     &sort_col_id,
+                                             &sort_order);
+	log_debug("save_settings(): sort_col_id=%d", sort_col_id);
+	log_debug("save_settings(): sort_col_order=%d", sort_order);
+
+	g_settings_set_int(settings, "tasks-sort-col", sort_col_id);
+	g_settings_set_int(settings, "tasks-sort-order", sort_order);
 
 	gtk_window_get_size(window, &w, &h);
 	gtk_window_get_position(window, &x, &y);
@@ -51,20 +65,29 @@ static gboolean delete_event_cbk(GtkWidget *w, GdkEvent *evt, gpointer data)
 GtkWindow *create_window(GtkBuilder *builder, GSettings *settings)
 {
 	GtkWindow *window;
-	int x, y, h, w;
+	int x, y, h, w, sort_col_id;
+	GtkSortType sort_order;
+	GtkTreeSortable *model;
 
 	window = GTK_WINDOW(gtk_builder_get_object(builder, "window"));
 
-	x = g_settings_get_int(settings, "window-x");
-	y = g_settings_get_int(settings, "window-y");
 	w = g_settings_get_int(settings, "window-width");
 	h = g_settings_get_int(settings, "window-height");
-
 	gtk_window_set_default_size(window, w, h);
+
+	x = g_settings_get_int(settings, "window-x");
+	y = g_settings_get_int(settings, "window-y");
 	gtk_window_move(window, x, y);
 
 	g_signal_connect(window, "delete_event",
 			 G_CALLBACK(delete_event_cbk), settings);
+
+	w_treeview = GTK_TREE_VIEW(gtk_builder_get_object(builder, "treeview"));
+
+	sort_col_id = g_settings_get_int(settings, "tasks-sort-col");
+	sort_order = g_settings_get_int(settings, "tasks-sort-order");
+	model = GTK_TREE_SORTABLE(gtk_tree_view_get_model(GTK_TREE_VIEW(w_treeview)));
+	gtk_tree_sortable_set_sort_column_id(model, sort_col_id, sort_order);
 
 	return window;
 }
